cmake_minimum_required(VERSION 4.0)
project(advent_of_code)

set(CMAKE_CXX_STANDARD 14)

add_executable(advent_of_code
        template.cpp
        2024/cpp/day_10.cpp
        2024/cpp/day_11.cpp
        2024/cpp/day_12.cpp
        2024/cpp/day_13.cpp
        2024/cpp/day_09.cpp
        2024/cpp/day_14.cpp
        2024/cpp/day_15.cpp
        2025/day_01.cpp
        2025/day_02.cpp
        2025/day_03.cpp
        2025/day_04.cpp
        2025/day_05.cpp
        2025/day_06.cpp
        2025/day_07.cpp
        2025/day_08.cpp
)
